<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/przywitaj"
        android:textColor="#800080"
        android:textSize="25sp"
        android:id="@+id/napis_1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/przycisk_1"
        android:onClick="zmienNapis1" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_2"
        android:onClick="zmienNapis2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_3"
        android:onClick="przywrocNapis"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/licznik"
        android:textColor="#800080"
        android:textSize="25sp"
        android:id="@+id/licznik" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dodaj"
        android:onClick="dodaj" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/odejmij"
        android:onClick="odejmij"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/resetuj"
        android:onClick="resetuj"/>

</LinearLayout>